--- a/style.css
+++ b/style.css
@@ -53,9 +53,16 @@ body {
 	background-color: rgb(53, 125, 20);
 	padding: 5px 20px 20px 20px;
 	border-radius: 5px;
+	display: inline-block;
 }
 #duaNames{
 	column-count: 2;
+}
+#startPage{
+	position: absolute;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	left: 50%;
 }
 
 .title{
