--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@
 		height: 100%;
 	}
 
-	.duaName, .ziyaraName{
+	.duaName, .ziyaraName, .ramDuaName{
 		font-size: 1vw;
 		background-color: white;
 		padding: 10px 10px 10px 10px;
@@ -51,21 +51,24 @@
 	}
 	.container{
 		display: inline-block;
-		width: 30%;
+		width: 20%;
 		background-color: rgb(53, 125, 20);
 		padding: 5px 20px 20px 20px;
 		border-radius: 5px;
 		vertical-align: middle;
 	}
 	.innerContainer{
-		column-count: 2;
+		column-count: 1;
+		display: grid;
+		overflow-y: auto;
+		height: 720px;
 	}
 	h1{
 		color: white;
 	}
 	h2{
 		color: white;
-		font-size: 1vw;
+		font-size: 0.9vw;
 		float: left;
 		margin: 0 auto;
 	}
@@ -77,7 +80,7 @@
 		width: 100%;
 	}
 	.right{
-		width: 20%;
+		width: 30%;
 		float: right;
 		margin-right: 2%;
 	}
